# provia-glass-crm

./: .env  .env.example  .gitignore  APPLY_MIGRATIONS_NOW.sql  DEPANNAGE_URGENT.md  DEPLOYMENT.md  DEPLOY_EDGE_FUNCTIONS.md  DEPLOY_MAINTENANT.md  DOC_TEMPLATES.md  EMAIL_SETUP.md  EMAIL_SMTP_SETUP.md  EMAIL_TROUBLESHOOTING.md  FIX_FINAL_TRIGGER.md  FIX_STORAGE_SIGNATURES_RLS.sql  FIX_STORAGE_SIGNATURES_RLS_V2.sql  GUIDE_ACCESS_CONTROLS.md  GUIDE_MASTER_DEPLOYMENT.md  HISTORIQUE_INTERVENTIONS.md  MAKE_SIGNATURES_BUCKET_PUBLIC.sql  MIGRATION_GUIDE.md  PROBLEMES_ET_SOLUTIONS.md  README.md  RECAP_CORRECTIONS.md  ROLES_HIERARCHY.md  SECURITY_AUDIT_REPORT.md  SOLUTION_IMMEDIATE.md  SUPABASE_SETUP_VERIFICATION.md  TESTS_AUTOMATISES.md  VERIFICATION_SECRETS_COMPLETE.md  VERIFICATION_TEST.md  apply_all_migrations.sql  apply_migrations_part1.sql  apply_migrations_part2.sql  check_column_types.sql  check_notifications_link_type.sql  fix-company-id.sql  fix-company-mismatch.sql  fix_notifications_before_migration.sql  force-deploy.sh  index.html  (+8 more)
.github/workflows/: tauri-release.yml
api/releases/: latest.ts
docs/: DESKTOP_RELEASES.md  RELEASES.md
public/: manifest.json  sw.js  sw.js.disabled
scripts/: apply-intervention-logs-migration.ts  deploy-email-functions.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/components/: EnvError.tsx  ErrorBoundary.tsx
src/contexts/: EmployeeContext.tsx
src/hooks/: useCompany.ts  (+17 more)
supabase/: .env.example  config.toml
(+325 files in other folders)
